--- a/Plugins/Bash Quotes/Bash Quotes.csproj
+++ b/Plugins/Bash Quotes/Bash Quotes.csproj
@@ -50,16 +50,17 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BashQuoteSource.cs" />
     <Compile Include="BashQuotesPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuoteSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CBot\CBot.csproj">
