--- a/Plugins/BattleBot/BattleBot.csproj
+++ b/Plugins/BattleBot/BattleBot.csproj
@@ -57,12 +57,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivityReport.cs" />
     <Compile Include="AI.cs" />
     <Compile Include="ArenaVersion.cs" />
     <Compile Include="BattleBotPlugin.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Combatant.cs" />
     <Compile Include="DCCClient.cs" />
+    <Compile Include="EventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Technique.cs" />
     <Compile Include="Types.cs" />
