FAQ and UNO plugin bug fixes.

--- a/Plugins/FAQ/FAQ.csproj
+++ b/Plugins/FAQ/FAQ.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Factoid.cs" />
-    <Compile Include="FAQPlugin.cs" />
+    <Compile Include="FaqPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
