--- a/CBot/CBot.csproj
+++ b/CBot/CBot.csproj
@@ -52,10 +52,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CBot\Attributes.cs" />
@@ -69,8 +70,8 @@
     <Compile Include="CBot\NickServSettings.cs" />
     <Compile Include="CBot\PluginCollection.cs" />
     <Compile Include="CBot\SayOptions.cs" />
-    <Compile Include="CBot\CommandRequest.cs" />
     <Compile Include="IniReader.cs" />
+    <Compile Include="IRC\AsyncRequest.cs" />
     <Compile Include="IRC\IrcMessageTarget.cs" />
     <Compile Include="IRC\IrcChannel.cs" />
     <Compile Include="IRC\IrcChannelCollection.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="IRC\IrcUser.cs" />
     <Compile Include="IRC\IrcChannelUserCollection.cs" />
     <Compile Include="IRC\IrcUserCollection.cs" />
+    <Compile Include="IRC\WhoisResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CBot\Account.cs" />
     <Compile Include="ConsoleUtils.cs" />
