--- a/CBot/CBot.csproj
+++ b/CBot/CBot.csproj
@@ -59,52 +59,37 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CBot\Attributes.cs" />
-    <Compile Include="CBot\AutoJoinChannel.cs" />
-    <Compile Include="CBot\ClientEntry.cs" />
-    <Compile Include="CBot\CommandScope.cs" />
-    <Compile Include="CBot\ConsoleClient.cs" />
-    <Compile Include="CBot\EventArgs.cs" />
-    <Compile Include="CBot\IniConfig.cs" />
-    <Compile Include="CBot\InvalidPluginException.cs" />
-    <Compile Include="CBot\NickServSettings.cs" />
-    <Compile Include="CBot\PluginCollection.cs" />
-    <Compile Include="CBot\SayOptions.cs" />
+    <Compile Include="Attributes.cs" />
+    <Compile Include="AutoJoinChannel.cs" />
+    <Compile Include="ClientEntry.cs" />
+    <Compile Include="CommandScope.cs" />
+    <Compile Include="ConsoleClient.cs" />
+    <Compile Include="EventArgs.cs" />
+    <Compile Include="IniConfig.cs" />
+    <Compile Include="InvalidPluginException.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="NickServSettings.cs" />
+    <Compile Include="PluginCollection.cs" />
+    <Compile Include="SayOptions.cs" />
     <Compile Include="IniReader.cs" />
-    <Compile Include="IRC\AsyncRequest.cs" />
-    <Compile Include="IRC\IrcMessageTarget.cs" />
-    <Compile Include="IRC\IrcChannel.cs" />
-    <Compile Include="IRC\IrcChannelCollection.cs" />
-    <Compile Include="IRC\ChannelModes.cs" />
-    <Compile Include="IRC\ChannelStatus.cs" />
-    <Compile Include="IRC\IrcChannelUser.cs" />
-    <Compile Include="IRC\EventArgs.cs" />
-    <Compile Include="IRC\IrcExtensions.cs" />
-    <Compile Include="IRC\Handlers.cs" />
-    <Compile Include="IRC\Hostmask.cs" />
-    <Compile Include="IRC\IrcLine.cs" />
-    <Compile Include="IRC\Enums.cs" />
-    <Compile Include="IRC\ModeCollection.cs" />
-    <Compile Include="IRC\Replies.cs" />
-    <Compile Include="IRC\IrcStringComparer.cs" />
-    <Compile Include="IRC\IrcUser.cs" />
-    <Compile Include="IRC\IrcChannelUserCollection.cs" />
-    <Compile Include="IRC\IrcUserCollection.cs" />
-    <Compile Include="IRC\WhoisResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CBot\Account.cs" />
+    <Compile Include="Account.cs" />
     <Compile Include="ConsoleUtils.cs" />
-    <Compile Include="CBot\Bot.cs" />
-    <Compile Include="CBot\Identification.cs" />
-    <Compile Include="IRC\Colours.cs" />
-    <Compile Include="IRC\IrcClient.cs" />
-    <Compile Include="CBot\Plugin.cs" />
-    <Compile Include="CBot\PluginEntry.cs" />
+    <Compile Include="Bot.cs" />
+    <Compile Include="Identification.cs" />
+    <Compile Include="Plugin.cs" />
+    <Compile Include="PluginEntry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\AnIRC\AnIRC\AnIRC.csproj">
+      <Project>{0f38dd6f-9bc0-480b-8695-6f50acb8a8c7}</Project>
+      <Name>AnIRC</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio AllowExistingFolder="true" />
   </ProjectExtensions>
