--- a/Plugins/BattleBot/BattleBot.csproj
+++ b/Plugins/BattleBot/BattleBot.csproj
@@ -68,12 +68,20 @@
     <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\AnIRC\AnIRC\AnIRC.csproj">
+      <Project>{0f38dd6f-9bc0-480b-8695-6f50acb8a8c7}</Project>
+      <Name>AnIRC</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\CBot\CBot.csproj">
       <Project>{C734F450-74BA-4ECF-AB7B-3B5ED3E4CD76}</Project>
       <Name>CBot</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetPath)" "$(ProjectDir)..\..\bins\plugins"</PostBuildEvent>
+  </PropertyGroup>
+
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -81,4 +89,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+  </PropertyGroup>
 </Project>
