--- a/Plugins/HelpCommand/HelpCommand.csproj
+++ b/Plugins/HelpCommand/HelpCommand.csproj
@@ -44,4 +44,11 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetPath)" "$(ProjectDir)..\..\bins\plugins"</PostBuildEvent>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+  </PropertyGroup>
 </Project>
