--- a/CBot/CBot.csproj
+++ b/CBot/CBot.csproj
@@ -38,6 +38,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0-preview2-26406-04\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +59,7 @@
     <Compile Include="ConsoleClient.cs" />
     <Compile Include="ConsoleUtils.cs" />
     <Compile Include="EventArgs.cs" />
+    <Compile Include="Heap.cs" />
     <Compile Include="Identification.cs" />
     <Compile Include="IniConfig.cs" />
     <Compile Include="IniReader.cs" />
