UNO plugin: update packages.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "AnIRC"]
 	path = AnIRC
 	url = https://github.com/AndrioCelos/AnIRC.git
+[submodule "References/RandomOrgJson-RPC"]
+	path = References/RandomOrgJson-RPC
+	url = https://github.com/AndrioCelos/RandomOrgJson-RPC
