--- a/Plugins/HelpCommand/HelpCommand.csproj
+++ b/Plugins/HelpCommand/HelpCommand.csproj
@@ -29,6 +29,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelpCommandPlugin.cs" />
@@ -40,7 +41,7 @@
       <Name>AnIRC</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\CBot\CBot.csproj">
-      <Project>{C734F450-74BA-4ECF-AB7B-3B5ED3E4CD76}</Project>
+      <Project>{443cf20b-2ec3-4e17-aced-0b741df4b8f6}</Project>
       <Name>CBot</Name>
     </ProjectReference>
   </ItemGroup>
