--- a/CBot/CBot.csproj
+++ b/CBot/CBot.csproj
@@ -8,6 +8,7 @@
 	<Company>Andrio Celos</Company>
 	<Authors>Andrio Celos</Authors>
 	<Copyright>© 2012-2021 Andrea Giannone</Copyright>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
