--- a/Plugins/BattleArenaManager/packages.config
+++ b/Plugins/BattleArenaManager/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Octokit" version="0.27.0" targetFramework="net452" />
+  <package id="LibGit2Sharp" version="0.26.1" targetFramework="net462" />
+  <package id="LibGit2Sharp.NativeBinaries" version="2.0.289" targetFramework="net462" />
+  <package id="Octokit" version="0.30.0" targetFramework="net452" />
+  <package id="SourceLink.Create.GitHub" version="2.8.0" targetFramework="net452" />
 </packages>
