Update submodules and remove obsolete submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,4 @@
 [submodule "AnIRC"]
 	path = AnIRC
 	url = https://github.com/AndrioCelos/AnIRC.git
-[submodule "References/RandomOrgJson-RPC"]
-	path = References/RandomOrgJson-RPC
-	url = https://github.com/AndrioCelos/RandomOrgJson-RPC
+	branch = net5.0
