--- a/CBot/CBot.csproj
+++ b/CBot/CBot.csproj
@@ -2,14 +2,29 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 	<LangVersion>preview</LangVersion>
-	<Version>4.0.0</Version>
+	<Version>4.1.0</Version>
 	<Company>Andrio Celos</Company>
 	<Authors>Andrio Celos</Authors>
-	<Copyright>© 2012-2021 Andrea Giannone</Copyright>
+	<Copyright>© 2012-2022 Andrea Giannone</Copyright>
 	<Nullable>enable</Nullable>
+	<AssemblyVersion>4.1.0.0</AssemblyVersion>
+	<FileVersion>4.1.0.0</FileVersion>
+	<PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
+	<PackageReadmeFile>readme.md</PackageReadmeFile>
+	<PackageLicenseFile>..\license.md</PackageLicenseFile>
+	<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+	<AnalysisLevel>preview</AnalysisLevel>
+	<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
