--- a/Plugins/BattleBot/BattleBot.csproj
+++ b/Plugins/BattleBot/BattleBot.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Copyright>© 2012-2021 Andrea Giannone</Copyright>
+    <Copyright>© 2012-2022 Andrea Giannone</Copyright>
     <FileVersion>3.0.0.0</FileVersion>
-    <Version>3.0.0</Version>
+    <Version>3.1.0</Version>
     <Authors>Andrio Celos</Authors>
+    <PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/AndrioCelos/CBot</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
