--- a/Plugins/BotControl/BotControl.csproj
+++ b/Plugins/BotControl/BotControl.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <PackageId>BotControl</PackageId>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
     <Authors>Andrio Celos</Authors>
-    <Copyright>© 2014-2021 Andrea Giannone</Copyright>
+    <Copyright>© 2014-2022 Andrea Giannone</Copyright>
     <Product>Bot Control</Product>
+    <PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/AndrioCelos/CBot</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
