--- a/Plugins/CommandManager/CommandManager.csproj
+++ b/Plugins/CommandManager/CommandManager.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>0.0.0</Version>
+    <Version>1.1.0</Version>
     <Authors>Andrio Celos</Authors>
     <Product>Command Manager</Product>
-    <Copyright>© 2014-2021 Andrea Giannone</Copyright>
+    <Copyright>© 2014-2022 Andrea Giannone</Copyright>
+    <PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/AndrioCelos/CBot</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
