--- a/Plugins/Games/Greedy Dice/Greedy Dice.csproj
+++ b/Plugins/Games/Greedy Dice/Greedy Dice.csproj
@@ -1,13 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
     <PackageId>GreedyDice</PackageId>
     <Authors>Andrio Celos</Authors>
     <Product>GreedyDice</Product>
-    <Copyright>© 2012-2021 Andrea Giannone</Copyright>
+    <Copyright>© 2012-2022 Andrea Giannone</Copyright>
+    <SignAssembly>False</SignAssembly>
+    <PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/AndrioCelos/CBot</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
