--- a/Plugins/Games/UNO/UNO.csproj
+++ b/Plugins/Games/UNO/UNO.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <Authors>Andrio Celos</Authors>
-    <Version>2.0.0</Version>
-    <Copyright>© 2012-2021 Andrea Giannone</Copyright>
+    <Version>2.1.0</Version>
+    <Copyright>© 2012-2022 Andrea Giannone</Copyright>
+    <RepositoryUrl>https://github.com/AndrioCelos/CBot</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
