--- a/Plugins/SplatNet/SplatNet.csproj
+++ b/Plugins/SplatNet/SplatNet.csproj
@@ -1,8 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 	<Nullable>enable</Nullable>
+	<Version>1.1.0</Version>
+	<Authors>Andrio Celos</Authors>
+	<PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/AndrioCelos/CBot</RepositoryUrl>
+	<Copyright>© 2021-2022 Andrea Giannone</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
