--- a/Plugins/Time/Time.csproj
+++ b/Plugins/Time/Time.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
     <Authors>Andrio Celos</Authors>
-    <Copyright>© 2014-2021 Andrea Giannone</Copyright>
+    <Copyright>© 2014-2022 Andrea Giannone</Copyright>
+    <PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
+    <RepositoryType>https://github.com/AndrioCelos/CBot</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
