--- a/Plugins/Updater/Updater.csproj
+++ b/Plugins/Updater/Updater.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <Version>1.1.0</Version>
+    <Authors>Andrio Celos</Authors>
+    <PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/AndrioCelos/CBot</RepositoryUrl>
+    <Copyright>© 2021-2022 Andrea Giannone</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
